<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000000">
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="1"
        android:title="@string/action_favorite"
        app:showAsAction="always" />

</menu>