<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="#96D8AC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/primary_movie_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            layout="@layout/details_poster_title"/>

        <TextView
            android:id="@+id/tv_trailers_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/trailer_label" />

        <TextView
            android:id="@+id/tv_no_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no_trailer"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:reverseLayout="true"
            android:id="@+id/recyclerview_trailerList">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/tv_reviews_label" />

        <TextView
            android:id="@+id/tv_no_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no_reviews"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:id="@+id/recyclerview_reviewList"
            android:paddingBottom="16dp">

        </android.support.v7.widget.RecyclerView>



    </LinearLayout>
    </ScrollView>
</layout>